--- a/LeaveManagement.Web/Views/LeaveTypes/Index.cshtml
+++ b/LeaveManagement.Web/Views/LeaveTypes/Index.cshtml
@@ -33,6 +33,7 @@
             </td>
             
             <td>
+                    <button data-id="@item.Id" class="btn btn-primary allocateBtn " type="button">Allocate Leave</button>
                     <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id"><i class="fa-solid fa-pencil"></i></a> &nbsp;
                     <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><i class="fa-solid fa-info"></i></a> &nbsp;
                     <button data-id="@item.Id" asp-route-id="@item.Id" class="btn btn-danger deleteBtn" type="button"><i class="fa-solid fa-trash-can"></i></button>
@@ -45,12 +46,15 @@
 <form id="deleteForm" asp-action="Delete">
     <input type="hidden" id="leaveTypeId" name="Id" />
     
+</form><form id="allocationForm" asp-action="AllocateLeave">
+    <input type="hidden" id="leaveTypeIdAllocate" name="Id" />
+    
 </form>
 
             @section Scripts{
                 <script>
                     $(function(){
-            new DataTable('.table');
+
                         $('.deleteBtn').click(function (e) {
                             swal({
                                 title: "Are you sure?",
@@ -64,6 +68,23 @@
                                     var id = btn.data("id");
                                     $("#leaveTypeId").val(id);
                                     $("#deleteForm").submit();
+                                }
+                            });
+                        });
+                        
+                        $('.allocateBtn').click(function (e) {
+                            swal({
+                                title: "Are you sure?",
+                                text: "Are you sure you want to allocate this Leave to all employees?",
+                                icon: "warning",
+                                buttons: true,
+                                dangerMode: true
+                            }).then((confirm)=>{
+                                if (confirm) {
+                                    var btn = $(this);
+                                    var id = btn.data("id");
+                                    $("#leaveTypeIdAllocate").val(id);
+                                    $("#allocationForm").submit();
                                 }
                             });
                         });
